# recipes/service/spec/dist/openapi.json
@@ -39,11 +39,16 @@
               "schema": {
                 "type": "object",
                 "required": [
+                  "collectionId",
                   "title",
                   "subtitle",
                   "isPublic"
                 ],
                 "properties": {
+                  "collectionId": {
+                    "type": "string",
+                    "description": "Id of the collection this recipe belongs to"
+                  },
                   "title": {
                     "type": "string",
                     "description": "Recipe title"
